--- a/accounts-prod.yml
+++ b/accounts-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 accounts:
-  message: "Welcome to EazyBank accounts related PROD APIs "
+  message: "Welcome to EazyBank accounts related PRODUCTION APIs "
   contactDetails:
     name: "John Doe - Developer"
     email: "john@eazybank.com"
