--- a/gatewayserver.yml
+++ b/gatewayserver.yml
@@ -1,1 +1,10 @@
-
+server:
+  port: 8072
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+        defaultZone: "http://localhost:8080/eureka/"
